--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Job Position/title1</h3>
-                            <div class="time">2015 - Present</div>
+                            <h3 class="job-title">SEO/title1</h3>
+                            <div class="time">2017 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company">Startup Hubs, San Francisco</div>
+                        <div class="company">Jubayer IT Solution Ltd., Dhaka</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>-------------------------------------------------------------Describe your role here -----------------------------------------------------</p>  
