--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">SEO/title1</h3>
+                            <h3 class="job-title">SEO</title1</h3>
                             <div class="time">2017 - Present</div>
                         </div><!--//upper-row-->
                         <div class="company">Jubayer IT Solution Ltd., Dhaka</div>
