--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
 		<div class="carousel-item active">
-			<img class="d-block w-200" src="cover1.jpg" alt="First slide">
+			<img class="d-block w-200" src="cover1.png" alt="First slide">
 		</div>
 	</div>
  </div>
@@ -95,9 +95,9 @@
 		
         <div class="main-wrapper"> 
             <section class="section summary-section">
-                <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
+                <h2 class="section-title"><i class="fa fa-user"></i>About Myself</h2>
                 <div class="summary">
-                    <p>As a self-motivated person I have the intention to serve any esteemed organization with utmost sincerity that offers challenges to accomplish missions, to achieve set goals with optimum perfection on the way to build up a career as a profession.</p>
+			<p>I'm <a href="https://www.facebook.com/taufiq.jubayer" target="_blank"<b><i>Md. Taufiq Jubayer .</i></b></a>  .As a self-motivated person I have the intention to serve any esteemed organization with utmost sincerity that offers challenges to accomplish missions, to achieve set goals with optimum perfection on the way to build up a career as a profession.</p>
       		<p>I am fresher. Therefore, I am offering my willingness to work hard, to do better in the job and to be quick to adapt new situations as substitute for experience requirement. And three things I can do best – work, work and only work. In between there are justice, patience, intelligence and modesty role</p>
 		 <p>I like to read different types of books, periodicals & journals, visit new places, enjoy cycling & swimming, look in kith and kin, internet browsing and stay with family as well as be on the search of learning & applying the learned thing(s)</p>
 		 <p>I always derive or try to derive enjoyment through work. I like to take challenge and never avoid responsibility. I am hard-working, self-driven, committed, positive-minded, adaptive, and have high morale & thirst for learning. On the other hand, I have good people skills-communication, motivation and leadership. But I am sure I can make this ‘good’ to ‘excellent’ provided a practical working opportunity is given.</p>
